# merge_spdx_sboms

./: .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  USAGE.md  keys.sample.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  setup_environment.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: API.md  ARCHITECTURE.md  DEPENDENCY_MANAGEMENT.md  FEATURES.md  GITHUB_SETUP.md  TESTING.md
src/sbom_merger/: __init__.py  cli.py
src/sbom_merger/domain/: __init__.py  models.py
src/sbom_merger/infrastructure/: __init__.py  config.py  file_handler.py  github_client.py
src/sbom_merger/services/: __init__.py  id_generator.py  merger.py  parser.py  reporter.py  validator.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_additional_coverage.py  test_cli_comprehensive.py  test_cli_full_coverage.py  test_config.py  test_edge_cases.py  test_file_handler.py  test_final_coverage.py  test_github_client.py  test_id_generator.py  test_merger.py  test_merger_comprehensive.py  test_merger_unused_code.py  test_parser.py  test_parser_comprehensive.py  test_reporter.py  test_validator.py  test_validator_extended.py
